--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -12,7 +12,7 @@
       <li>
         <%= link_to root_path,
                     class: ("active" if current_page?(root_path)),
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"/>
@@ -22,7 +22,7 @@
       </li>
       <li>
         <%= link_to "#analytics",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
@@ -32,7 +32,7 @@
       </li>
       <li>
         <%= link_to "#reports",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
@@ -49,7 +49,7 @@
       <li>
         <%= link_to customers_path,
                     class: ("active" if controller_name == 'customers'),
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M16 4c0-1.11.89-2 2-2s2 .89 2 2-.89 2-2 2-2-.89-2-2zm4 18v-6h2.5l-2.54-7.63c-.34-1.02-1.3-1.74-2.46-1.74s-2.12.72-2.46 1.74L13.5 16H16v6h4z"/>
@@ -59,7 +59,7 @@
       </li>
       <li>
         <%= link_to "#orders",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M7 18c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12L8.1 13h7.45c.75 0 1.41-.41 1.75-1.03L21.7 4H5.21l-.94-2H1z"/>
@@ -69,7 +69,7 @@
       </li>
       <li>
         <%= link_to "#quotes",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
@@ -85,7 +85,7 @@
     <ul class="sidebar-menu">
       <li>
         <%= link_to "#delivery_notes",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M19 7h-3V6a4 4 0 0 0-8 0v1H5a1 1 0 0 0-1 1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8a1 1 0 0 0-1-1zM10 6a2 2 0 0 1 4 0v1h-4V6zm8 13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V9h2v1a1 1 0 0 0 2 0V9h4v1a1 1 0 0 0 2 0V9h2v10z"/>
@@ -95,7 +95,7 @@
       </li>
       <li>
         <%= link_to "#weighing_slips",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M12 3c-1.27 0-2.4.8-2.82 2H3v2h1.95c-.02.17-.05.33-.05.5C5 9.64 6.36 11 8 11s3-1.36 3-3.5c0-.17-.03-.33-.05-.5H19V5h-6.18C12.4 3.8 11.27 3 12 3zm0 2c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zM7 13v8h2v-8H7zm4 0v8h2v-8h-2zm4 0v8h2v-8h-2z"/>
@@ -105,7 +105,7 @@
       </li>
       <li>
         <%= link_to "#inventory",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
@@ -121,7 +121,7 @@
     <ul class="sidebar-menu">
       <li>
         <%= link_to "#invoices",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"/>
@@ -131,7 +131,7 @@
       </li>
       <li>
         <%= link_to "#payments",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
@@ -141,7 +141,7 @@
       </li>
       <li>
         <%= link_to "#open_items",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.11-.89-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
@@ -157,7 +157,7 @@
     <ul class="sidebar-menu">
       <li>
         <%= link_to "#settings",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.36,4.82,11.69,4.82,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/>
@@ -167,7 +167,7 @@
       </li>
       <li>
         <%= link_to "#backup",
-                    data: { "layout-target" => "sidebarLink",
+                    data: { layout_target: "sidebarLink",
                             action: "click->layout#selectSidebarItem" } do %>
           <svg class="menu-icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"/>
